--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover our wide range of online courses and start learning today!">
-    <meta name="keywords" content="Learnopia,education platform,free courses,dsa using c++,front-end web development,app development,operating system">
+    <meta name="keywords" content="riteshdhawanLearnopia,Learnopia,education platform,free courses,dsa using c++,front-end web development,app development,operating system">
     <link rel="shortcut icon" href="mortarboard.png" type="image/x-icon">
     <title>Learnopia - Home</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
